--- a/src/styles.css
+++ b/src/styles.css
@@ -1,18 +1,18 @@
 @font-face {
-    font-family: 'Lato';
-    src: url('./fonts/Lato-Bold.ttf') format('truetype'),
+  font-family: 'Lato';
+  src: url('./fonts/Lato-Bold.ttf') format('truetype'),
     url('./fonts/Lato-Light.ttf') format('truetype'),
     url('./fonts/Lato-Regular.ttf') format('truetype'),
     url('./fonts/Lato-Thin.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+  font-weight: normal;
+  font-style: normal;
 }
 
-html, body {
-    font-family: 'Lato', serif;
+html,
+body {
+  font-family: 'Lato', serif;
 }
 
 .hello {
-    color: orange;
+  color: orange;
 }
-
