--- a/src/components/Home/Section/styles.css
+++ b/src/components/Home/Section/styles.css
@@ -1,6 +1,6 @@
 .section {
-    display: flex;
-    flex-direction: column;
-    padding: 50px 20px;
-    border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  padding: 50px;
+  border: 0px solid black;
 }
